# tcc

./: .gitignore  Dockerfile  alternativas.json  docker-compose.yml  main.py  models.py  pyproject.toml  questoes.json
classes/: alternativa.py  aluno.py  questao.py
database/: batch_loader.py  crud.py  database.py  models.py  schemas.py
modulos/: arvore.py  questao.py
